<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/text1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/edit1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/edit2"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />


</android.support.constraint.ConstraintLayout>

