<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/text3"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/text3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit3"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/edit3"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="117dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/text4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <EditText
        android:id="@+id/edit4"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/edit4"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintTop_toBottomOf="@+id/edit3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="@string/button4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>

